--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, intial-scale=1">
 <title>Module 2- Coding Assignment</title>
+<link rel="stylesheet" href="style.css">
 <style>
 	
 /************ Base Style *********/
@@ -13,65 +14,52 @@
 }
 
 h1 {
-	margin-bottom: 180px;
-	text-align: center;
-}
-div {
-	background-color: gray;
-}
-
-p {
-	font-family: Arial;
-	width: 100%;
-	padding: 10px;
-}
-
-section {
-	font-family: Arial, Helvicta, sans-serif;
-	font-size: 18px;
-	position: relative;
-	left: 11px;
-	font-weight: bold;
-	border: 1px solid black;
-	padding-right: 20px;
-	padding-left: 20px;
-	float: right;
-}
-
-#p1 {
-	position: relative;
-	left: 60px;
-}
-#p2 {
-	position: relative;
-	left: 120px;
-}
-
-#section1 {
-	background-color: pink;
-}
-
-#section2 {
-	background-color: blue;
-}
-
-#section3 {
-	background-color: red;
+	margin-bottom: 20px;
 }
 
 
 /* Simple Responsive Framework. */
 .row {
-	width: 120%;
+	width: 100%;
 }
-/* Large devices only */
+/* Desktop devices only */
 @media (min-width: 992px) {
+#section1 {
+  background-color: pink;
+  font-weight: bold;
+}
+#section2 {
+  background-color: blue;
+  font-weight: bold;
+}
+#section3 {
+  background-color: red;
+  font-weight: bold;
+}
+
+#p1 {
+  width: 100%;
+  height: 20%;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+#p2 {
+  width: 100%;
+  height: 20%;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+#p3 {
+  width: 100%;
+  height: 20%;
+  padding-top: 10px;
+  padding-left: 10px;
+ }
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 	float: left;	
     border: 2px solid black;
-    padding-left: 10px;
-    padding-right: 10px;
   }
+
   .col-lg-1 {
     width: 8.33%;
   }
@@ -110,27 +98,30 @@ section {
   }
 }
 
-
-/********** Medium devices only **********/
+/********** Tablet devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
+#section1 {
+  background-color: pink;
+  font-weight: bold;
+}
+#section2 {
+  background-color: blue;
+  font-weight: bold;
+}
+#section3 {
+  background-color: red;
+  font-weight: bold;
+}
+#p3 {
+  width: 100%;
+  height: 100%;
+  padding-top: 10px;
+  padding-left: 10px;
+ }
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
     border: 2px solid black;
   }
-
-  #p1 {
-  	width: 50%;
-  }
-
-  #p2 {
-  	width: 50%;
-  }
-
-  #p3 {
-  	width: 100%;
-  	height: 100%;
-  }
-
   .col-md-1 {
     width: 8.33%;
   }
@@ -169,25 +160,41 @@ section {
   }
 }
 
-/********** Small devices only **********/
-*@media (max-width: 767px)  {
-	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
-    float: left;
-    border: 2px solid black;
-  }
 
-  #p1 {
-  	width: 100%;
+/********** Mobile devices only **********/
+@media (max-width: 767px) {
+ #section1 {
+  background-color: pink;
+  font-weight: bold;
+}
+#section2 {
+  background-color: blue;
+  font-weight: bold;
+}
+#section3 {
+  background-color: red;
+  font-weight: bold;
+} 
+#p1 {
+  width: 100%;
+  height: 80%;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+#p2 {
+  width: 100%;
+  height: 80%;
+  padding-top: 20px;
+  padding-left: 10px;
+}
+#p3 {
+  width: 100%;
+  height: 80%;
+  padding-top: 20px;
+  padding-left: 10px;
+ }  
+ .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
   }
-
-  #p2 {
-  	width: 100%;
-  }
-
-  #p3 {
-  	width: 100%;
-  }
-
   .col-sm-1 {
     width: 8.33%;
   }
@@ -232,13 +239,11 @@ section {
 <h1>Module 2: Solution</h1>
 
 <div class="row">
-  <div class="col-lg-3 col-md-6 col-sm-12"> <section id="section1">Chicken</section><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?</p></div>
+  <div class="col-lg-4 col-md-6 ;col-sm-12"><section id="section1">Chicken</section><p id="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?</p></div>
 
+  <div class="col-lg-4 col-md-6 ;col-sm-12"><section id="section2">Beef</section><p id="p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?</p></div>
 
-  <div class="col-lg-3 col-md-6 col-sm-12"p id="p1"><section id="section2">Beef</section><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?</p></div>
-
-
-  <div class="col-lg-3 col-md-6 col-sm-12"p id="p2"><section id="section3">Sushi</section><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?</p></div>
+  <div class="col-lg-4 col-md-12 ;col-sm-12 "><section id="section3">Sushi</section><p id="p3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet alias est? Nobis cum quasi at soluta odit, maiores quaerat dolores expedita ex nemo ea repellendus dolorem sed maxime quos?</p></div>
 </div>
 
 </body>
